--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
