--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,14 @@
         "brunocfalcao/blade-feather-icons": "^3.0",
         "codeat3/blade-coolicons": "^1.4",
         "davidhsianturi/blade-bootstrap-icons": "^1.4",
+        "firebase/php-jwt": "^6.10",
         "guzzlehttp/guzzle": "^7.2",
         "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/telescope": "^4.17",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
