--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
-        "maatwebsite/excel": "^1.1"
+        "phpoffice/phpspreadsheet": "^1.29"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
